<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Inicio">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_editar_inicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/editar_login"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_eliminar_inicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/eliminar_login"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_mostrar_inicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/mostrar_login"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/btn_cancelar_inicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/cancelar_login"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/nombre_inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/saludo_login"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:src="@drawable/my_avatar"
    />

</LinearLayout>