<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <ImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:src="@drawable/my_avatar"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/usuario_login"
        android:layout_margin="20dp"
        android:id="@+id/User"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/password_login"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:id="@+id/Password"
        />

    <Button
        android:id="@+id/btn_iniciar_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@color/purple_500"
        android:text="@string/btn_entrar_login"
        android:textSize="30dp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_registro_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:background="@color/purple_500"
        android:text="@string/btn_registrar_login"
        android:textStyle="bold"
        android:textSize="30dp"
        />
</LinearLayout>